--- a/emacs-config.org
+++ b/emacs-config.org
@@ -68,10 +68,10 @@ First, we need to enable Emacs's built-in package manager and configure the pack
 
 In order to keep my editor working smoothly, I'll only stick to stable versions of certain packages:
 #+BEGIN_SRC emacs-lisp
-  (setq package-pinned-packages
-        '(
-          (use-package . "melpa-stable")
-          ))
+  ;; (setq package-pinned-packages
+  ;;       '(
+  ;;         (use-package . "melpa-stable")
+  ;;         ))
 #+END_SRC
 
 Now that Emacs knows where to get =use-package=, and to only use the version from MELPA stable, we can load it.
