--- a/emacs-config.org
+++ b/emacs-config.org
@@ -765,9 +765,9 @@ I like to have an indicator of what lines changed. =diff-hl= does a pretty good 
     (add-hook 'dired-mode-hook 'diff-hl-dired-mode)
     (add-hook 'magit-post-refresh-hook 'diff-hl-magit-post-refresh)
     :config
-    (diff-hl-flydiff-mode t)
-    (unless (display-graphic-p)
-      (diff hl-margin-mode t)))
+    (if (display-graphic-p)
+	(diff-hl-flydiff-mode t)
+      (diff-hl-margin-mode t)))
 #+END_SRC
 
 ** Command aliases
