--- a/emacs-config.org
+++ b/emacs-config.org
@@ -233,7 +233,7 @@ Maybe I'll actually use it unlike vim's NerdTree.
     :pin melpa-stable
     :diminish projectile-mode
     :init
-    (setq projectile-require-project-root t
+    (setq projectile-require-project-root nil
           projectile-completion-system 'ivy)
     :config
     (setq projectile-globally-ignored-directories
