--- a/emacs-config.org
+++ b/emacs-config.org
@@ -347,22 +347,24 @@ Instead, one only needs to write a client for the desired language's language se
 
 #+BEGIN_SRC emacs-lisp
   (use-package lsp-mode
+    :ensure t
     :pin melpa-stable
-    :config
-    (add-hook 'prog-mode-hook 'lsp-mode))
+    :init
+    ;; make sure we have lsp-imenu everywhere we have LSP
+    (require 'lsp-imenu)
+    (add-hook 'prog-major-mode #'lsp-prog-major-mode-enable))
 
   (use-package lsp-ui
-    :after (:all lsp-mode)
-    :config
-    (add-hook 'lsp-mode-hook 'lsp-ui-mode))
-
+    :ensure t
+    :init
+    (setq lsp-ui-sideline-ignore-duplicate t)
+    (add-hook 'lsp-mode-hook #'lsp-ui-mode))
 #+END_SRC
 
 You can also use =company-mode= with LSP:
 #+BEGIN_SRC emacs-lisp
   (use-package company-lsp
-    :after (:all lsp-mode company)
-    :config
+    :init
     (push 'company-lsp company-backends))
 #+END_SRC
 
@@ -506,9 +508,10 @@ To enable editing of code blocks in indirect buffers using =C-c '=:
     (setq rust-format-on-save t))
 
   (use-package lsp-rust
-    :after (:all rust-mode lsp-mode)
+    :ensure t
     :init
-    (setq lsp-rust-rls-command '("rls")))
+    (setq lsp-rust-rls-command '("rustup" "run" "nightly" "rls"))
+    (add-hook 'rust-mode-hook #'lsp-rust-enable))
 #+END_SRC
 
 *** Stylesheets
