--- a/emacs-config.org
+++ b/emacs-config.org
@@ -644,7 +644,7 @@ Disable the annoying bell:
 What's the most important part about a user interface? The font!
 #+BEGIN_SRC emacs-lisp
   (if (eq system-type 'darwin)
-      (add-to-list 'default-frame-alist '(font . "Fira Code-12"))
+      (add-to-list 'default-frame-alist '(font . "Iosevka-12"))
     (add-to-list 'default-frame-alist '(font . "Iosevka-10:antialias=natural")))
 #+END_SRC
 
